style/keertimaan.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
body {
    background-color: #eaf4f6;
}

.eventHeading {
    color: black;
    font-family: 'Quicksand', sans-serif;
    font-size: 15px;
    /* text-shadow: 1px 1px 8px grey; */
    text-align: center;
    background-color: #061a2c;
}

.eventContainer {
    position: relative;
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding: 30px;
}

.eventContainer .eventContentLeft {
    font-family: 'Quicksand', sans-serif;
    width: 50%;
    height: fit-content;
    margin: auto 0;
    float: left;
    padding: 0 3%;
    font-size: 20px;
}

.eventContainer .imgbox {
    position: relative;
    width: 37%;
    height: 25vw;
    margin: auto;
    border: 5px solid #061a2c;
    background-color: #061a2c;
}

.eventContainer .imgbox .event_image {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0px;
    left: 0px;
    object-fit: cover;
    display: none;
}

.eventContainer::after {
    content: "";
    clear: both;
    display: table;
}

.eventContainer .eventContentRight {
    font-family: 'Quicksand', sans-serif;
    width: 50%;
    height: fit-content;
    margin: auto 0;
    float: right;
    padding-left: 3%;
    font-size: 20px;
}

@media(max-width: 800px) {
    .eventContainer .eventContentLeft {
        font-size: 12px;
    }
    .eventContainer .eventContentRight {
        font-size: 12px;
    }
}

@media(max-width: 600px) {
    .eventContentLeft,
    .eventContentRight {
        margin: auto;
        transform: translateX(-10%);
        width: 100%;
    }
    .Kman_left {
        flex-direction: column-reverse;
    }
    .Kman_right {
        flex-direction: column;
    }
    .imgbox {
        width: 60%!important;
        height: 40vw!important;
        transform: translateX(-10%);
    }
    .eventContainer {
        text-align: center;
    }
}

.eventContentRight,
.eventContentLeft {
    font-family: 'Quicksand', sans-serif;
}

